force-app/main/default/objects/encompass_By_EM__Employment__c/encompass_By_EM__Employment__c.object-meta.xml
<CustomObject>
    <label>Employment</label>
    <nameField>
        <displayFormat>Employment-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>