force-app/main/default/objects/encompass_By_EM__Employment__c/fields/encompass_By_EM__Duration_Years__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Duration_Years__c</fullName>
    <label>Duration Years</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>