force-app/main/default/objects/encompass_By_EM__Employment__c/fields/encompass_By_EM__Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Employer_Name__c</fullName>
    <label>Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>