force-app/main/default/objects/encompass_By_EM__Employment__c/fields/encompass_By_EM__Employment_External_ID__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Employment_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Employment External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>