force-app/main/default/objects/encompass_By_EM__Employment__c/fields/encompass_By_EM__Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Employment_Type__c</fullName>
    <formula>IF( encompass_By_EM__BorrowerIndicator__c != NULL, &quot;Borrower&quot;, &quot;CoBorrower&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employment Type</label>
    <type>Text</type>
</CustomField>