force-app/main/default/objects/encompass_By_EM__Employment__c/fields/encompass_By_EM__Job_Title__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Job_Title__c</fullName>
    <label>Job Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>