force-app/main/default/objects/encompass_By_EM__Employment__c/fields/encompass_By_EM__Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Loan_Application__c</fullName>
    <label>Loan Application</label>
    <referenceTo>encompass_By_EM__Loan_Application__c</referenceTo>
    <relationshipLabel>Employments</relationshipLabel>
    <relationshipName>Employments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>