force-app/main/default/objects/encompass_By_EM__Employment__c/fields/encompass_By_EM__Phone__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>