force-app/main/default/objects/encompass_By_EM__Employment__c/fields/encompass_By_EM__Self_Employed__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Self_Employed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self Employed</label>
    <type>Checkbox</type>
</CustomField>