force-app/main/default/objects/encompass_By_EM__Employment__c/fields/encompass_By_EM__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>