force-app/main/default/objects/encompass_By_EM__Employment__c/fields/encompass_By_EM__Time_At_Employer__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Time_At_Employer__c</fullName>
    <formula>Text(encompass_By_EM__Duration_Years__c)  + &apos; Years &apos;+ Text(encompass_By_EM__Duration_Months__c) + &apos; Months&apos;</formula>
    <label>Time At Employer</label>
    <type>Text</type>
</CustomField>