force-app/main/default/objects/encompass_By_EM__Employment__c/fields/encompass_By_EM__Total_Income__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Total_Income__c</fullName>
    <label>Total Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>