force-app/main/default/objects/encompass_By_EM__Employment__c/fields/encompass_By_EM__Years_in_Current_Postition__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Years_in_Current_Postition__c</fullName>
    <label>Years in Current Postition</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>