force-app/main/default/objects/encompass_By_EM__Employment__c/fields/encompass_By_EM__Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Zip_Code__c</fullName>
    <label>Zip Code</label>
    <length>24</length>
    <type>Text</type>
</CustomField>